# QuillWrite

./: .gitignore  Cargo.toml  README.md  devices.json
.adds/nm/: config
.cargo/: config.toml
quilload/: Cargo.toml
quilload/.cargo/: config.toml
quilload/src/: main.rs
src/: main.rs
src/submodules/: device_handler.rs  fonts.rs  main_panel.rs  mod.rs  top_panel.rs  transmit_payload.rs
