[package]
name = "quillwrite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.26.2"
confy = "0.6.1"
serde = "1.0.197"
serde_json = "1.0.66"
rusb = "0.9.3"
libmtp-rs = "0.7.7"
dirs = "5.0.1"
