[package]
name = "quillwrite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.2"
confy = "0.6.1"
serde = "1.0.197"
serde_json = "1.0.66"
block-utils = "0.11.1"
dirs = "5.0.1"
tar = "0.4.40"
flate2 = "1.0.30"
